<resources>
    <string name="app_name">Moxie</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create account</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number_hint">Mobile number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="terms_and_condition">terms and condition</string>
    <string name="i_agree_to_the">I agree to the </string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="welcome_back">Welcome back</string>
    <string name="email_address_or_mobile_number">Email address or mobile number</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="already_have_an_account">Already have an account?\t</string>
    <string name="sign_up">Sign up</string>
    <string name="start_page_des">Test your wits with our daily live quiz shows and win cash! Free quizzes of a variety of themes updated daily for all you brainiacs out there.</string>
    <string name="the_game_is_on">The game \nis on.</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="enter_email_or_mobile">Enter email or mobile number</string>
    <string name="title_activity_viewer">ViewerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="write_something">Write Something</string>
    <string name="upcoming_quiz_shows">Upcoming quiz shows</string>
    <string name="share">Share</string>
    <string name="image_showing_quiz_thumbnail">Image showing quiz thumbnail</string>
    <string name="cast_your_vote_now"><![CDATA[Cast your vote now]]></string>
    <string name="free_quizzes">Free quizzes</string>
    <string name="see_all">See all</string>
    <string name="movies">Movies</string>
    <string name="calculate_scores_and_show_leaderboard">Calculate Scores and show Leaderboard</string>
    <string name="congratulations_nhere_are_the_winners">Congratulations!\nHere are the winners</string>
    <string name="dummy_winner_detail">Sam P\n$450.85</string>
    <string name="calculating_score">Calculating Score</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="dummy_details">Is your entire existence consumed by the entertainment industry? Do you live for the latest celebrity gossip? Are you dazzled by the bright lights of Hollywood? Test your pop culture wits today at 2pm with our host Marley Blu!</string>
    <string name="play_a_free_game_to_warm_up_for_the_quiz">Play a free game to warm up for the quiz!</string>
    <string name="up_button_desc">Click to go back</string>

    <string name="facebook_app_id">746835307151394</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">f2a5b969601bf8ce143539a4f6bd8ed8</string>
    <string name="start_streaming">Start Streaming</string>
    <string name="logout_button_for_host">Logout Button for host</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="set_reminder">Set reminder</string>
    <string name="go_live">Go Live</string>
    <string name="quiz_vote_start_text">On your vote, get set, go! Voting for the theme ends at 5pm before the quiz show.</string>
    <string name="submit_vote">Submit Vote</string>
    <string name="log_out">Log out</string>
    <string name="tip_before_quiz">Tip:\nPlease ensure you have a stable internet connection before commencing quiz</string>
    <string name="count_down_progressbar">count down progressbar</string>
    <string name="we_be_nright_nback">WE BE\nRIGHT\nBACK</string>
    <string name="game_summary">Game Summary</string>
    <string name="dummy_percent_text">You are 75% faster than\nall of the participants</string>
    <string name="enjoy_5_credits_off_nyour_next_quiz">Enjoy 5 credits off\nyour next quiz</string>
    <string name="claim_offer">Claim offer</string>
    <string name="finish_game">Finish Game</string>
    <string name="tip_nremember_you_can_t_learn_it_all_but_starting_with_topics_of_genuine_interest_will_not_only_make_learning_trivia_easier_but_it_will_make_trivia_more_fun">Tip:\nRemember, you can’t learn it all, but starting with topics of genuine interest will not only make learning trivia easier, but it will make trivia more fun.</string>
    <string name="you_re_answer_45_more_questions_than_other_competitors">You’re answer 45% more questions than other competitors</string>
    <string name="what_were_you_good_at">What were you good at?</string>
    <string name="you_are_knowledgeable_in_90s_music_80_of_your_fastest_answers_were_base_on_those_questions">You are knowledgeable in 90s music. 80% of your fastest answers were base on those questions.</string>
    <string name="credit_activity">Credit Activity</string>
    <string name="past_quizzes">Past Quizzes</string>
    <string name="invite_friend_string">Invite a friend with your referral code to for them to get 120Rp and you 60Rp</string>


</resources>